chore: add swagger for login, register and roles
