# src/routes/v1/role.route.ts
@@ -1,9 +1,10 @@
 import express from 'express';
-import * as role from "../../controllers/role.controller"
+import * as role from '../../controllers/role.controller';
 
 const roleRoute = express.Router();
-roleRoute.get('/',role.getAllRole)
-roleRoute.get('/:id',role.getRoleId)
-roleRoute.post('/create',role.createRole)
+roleRoute.get('/', role.getAllRole);
+roleRoute.get('/:id', role.getRoleId);
+roleRoute.post('/create', role.createRole);
+roleRoute.delete('/:id', role.deleteRole);
 
 export default roleRoute;
